# VBCore_PowerBoard

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  README.md  STM32G474RETx_FLASH.ld  VBCore_PowerBoard.ioc  build.ninja  compile_commands.json
.run/: OpenOCD.run.xml  STLink.run.xml
Core/Inc/: battery_config.h  flash.hpp  main.h  power.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: config.cpp  main.c  power.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Drivers/: .gitignore
EWARM/: Project.eww  VBCore_PowerBoard.ewp
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
user/: ResponseAccumulator.hpp  communication.cpp  communication.h  config.cpp  flash.hpp  hmi.cpp  hmi.h
user/types/voltbro/: __init__.py
user/types/voltbro/battery/: __init__.py  buttons_1_0.h  buttons_1_0.py  state_1_0.h  state_1_0.py
user/types/voltbro/config/: __init__.py
user/types/voltbro/config/dc/: __init__.py  get_1_0.h  get_1_0.py  pid_config_1_0.h  pid_config_1_0.py  pid_report_1_0.h  pid_report_1_0.py  set_1_0.h  set_1_0.py
user/types/voltbro/config/six_step/: __init__.py  get_1_0.h  get_1_0.py  log_1_0.h  log_1_0.py  log_item_1_0.h  log_item_1_0.py  pid_config_1_0.h  pid_config_1_0.py  pid_report_1_0.h  pid_report_1_0.py  set_1_0.h  set_1_0.py  values_1_0.h  values_1_0.py
user/types/voltbro/echo/: __init__.py  echo_msg_1_0.h  echo_msg_1_0.py  echo_service_1_0.h  echo_service_1_0.py
user/types/voltbro/hmi/: __init__.py  beeper_service_1_0.h  beeper_service_1_0.py  led_service_1_0.h  led_service_1_0.py
